--- a/prenotamensa/templates/prenotamensa/index.html
+++ b/prenotamensa/templates/prenotamensa/index.html
@@ -7,20 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    
-    <link rel="shortcut icon" type="image/png" href="{% static 'english/favicon.ico' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'english/css/clearbtn.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'english/css/table.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'english/css/explanation.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'english/css/mainpage.css' %}"/>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'prenotamensa/css/docs.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'prenotamensa/css/bootstrap.min.css' %}"/>
 
-    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery/1.11.1.min.js"></script>
-    <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.stock.min.js"></script>
+    <script src="{% static 'prenotamensa/js/bootstrap.bundle.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'prenotamensa/js/canvasjs.stock.min.js' %}"></script>
     <script type="text/javascript">
     </script>
     
